--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ body{
     width: 5rem;
     text-align: center;
     font-size: 3rem;
+    border-radius: 2em;
 }
 .dice h1{
     position: relative;
